fixed alignment, colours
still need max height

--- a/Bootstrap practice/stylepractice.css
+++ b/Bootstrap practice/stylepractice.css
@@ -7,9 +7,9 @@ height: 200px;
 }
 
 .previewblock {
-	background-color: #cecece;
-	background-size: cover;
-	height: 200px;
+  background-color: #cecece;
+  background-size: cover;
+  height: 200px;
 }
 
 #credits {
@@ -17,7 +17,7 @@ font-size: 10px;
 color:#262626;
 
 }
-								
+                
 #credits a{
 text-decoration:none;
 color: #e41e2b;
@@ -25,9 +25,9 @@ padding-top:50px;
 }
 
 #bighex {
-	background-color: #e41e2b;
-	height: 100px;
-	width: 100px;
+  background-color: #e41e2b;
+  height: 100px;
+  width: 100px;
   padding: 5px;
   margin: auto;
   display:block;
@@ -37,18 +37,13 @@ padding-top:50px;
 li {
   text-align: center;
   display: block;
-  
 }
 
-.active {
-  background-color: #fc678d;
-  color: #ffffff;
-}
-
-.navbar {background-color: #f9f9f9; color: #262626; border-color: transparent;}
+.navbar {background-color: #f9f9f9; color: #262626;}
 .navbar-default .navbar-nav > li > a, .navbar-default .navbar-brand {color: #262626;}
 .navbar-default .navbar-nav > li > a:hover {color: #ffffff; background-color: #e41e2b;}
 .navbar-default .navbar-nav > li > a:focus {color: #ffffff; background-color: #fc678d;}
+
 
 /* make sidebar nav vertical */ 
 @media (min-width: 768px) {
@@ -56,8 +51,15 @@ li {
     padding: 0;
     max-height: none;
     position: relative;
-    
   }
+
+.navbar{
+  box-shadow: 0px -2px 5px rgba(0,0,0,0.7);
+border-right-width: 1px;
+border-right-color: #ffffff;
+border-right-style: solid;
+border-radius:0;
+}
 
 .navbar-nav {
     clear: left;
@@ -78,15 +80,10 @@ li {
     float: none;
     display: block;
   }
-
-  }
   .sidebar-nav .navbar li a {
     padding-top: 12px;
     padding-bottom: 12px;
-
   }
-
-
   
   .navbar-brand {
     height: 200px; // Logo will not overhang
@@ -111,5 +108,5 @@ width: auto;
 .navbar-header {
   width: 100%;
 }
-}
 
+}
